Shrinking images, changing signup box width to not blow out sides on mobile, changing date to hopefully fix github rendering the departure date poorly.

--- a/css/main.scss
+++ b/css/main.scss
@@ -42,7 +42,7 @@ article p, p, li {
 
 .signup-box .mdl-card__supporting-text {
   color: black;
-  width: 100%;
+  width: calc(100% - 20px);
 }
 
 .page-heading {
